Update AGRUPACION POR NIVEL Y ESTADISTICAS-checkpoint-Copy1.ipynb

--- a/AGRUPACION POR NIVEL Y ESTADISTICAS-checkpoint-Copy1.ipynb
+++ b/AGRUPACION POR NIVEL Y ESTADISTICAS-checkpoint-Copy1.ipynb
@@ -87,7 +87,7 @@
    "id": "63f99f16",
    "metadata": {},
    "source": [
-    "Realiza suma de los cotadores y del campo IE MAX, que en este caso es un valor numerico"
+    "Realiza suma de los contadores y del campo IE MAX, que en este caso es un valor numerico"
    ]
   },
   {
