Update Documentacion usos de variables entre funciones.ipynb

--- a/Documentacion usos de variables entre funciones.ipynb
+++ b/Documentacion usos de variables entre funciones.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "USO VARIABLES ENTRE FUNCIONES ENTRE PAQUETES Y MODULOS"
+    "PYTHON USO DE VARIABLES ENTRE FUNCIONES,  ENTRE PAQUETES Y MODULOS"
    ]
   },
   {
