--- a/Documentacion usos de variables entre funciones.ipynb
+++ b/Documentacion usos de variables entre funciones.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este tutorial esta dirigido a documentar como se puede usar variables entre modulos y paquetes, primero empezaremos por el uso en modulos"
+    "Este tutorial esta dirigido a documentar como se puede usar variables entre funciones, modulos y paquetes, primero empezaremos por el uso en funciones"
    ]
   },
   {
