Update 24 USO de variables entre PAQUETES Y MODULOS.ipynb

--- a/24 USO de variables entre PAQUETES Y MODULOS.ipynb
+++ b/24 USO de variables entre PAQUETES Y MODULOS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "USO DE MODULOS ENTRE PAQUETES Y MODULOS"
+    "USO DE VARIABLES (GLOBALES) ENTRE MODULOS DE UN PAQUETE"
    ]
   },
   {
