Update 24 USO de variables entre PAQUETES Y MODULOS.ipynb

--- a/24 USO de variables entre PAQUETES Y MODULOS.ipynb
+++ b/24 USO de variables entre PAQUETES Y MODULOS.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La clave del uso de las variables entre modulos de un paquete es el uso de la palabra reservada  \"global\" para definir varialble globales. \n",
+    "La clave del uso de las variables entre modulos de un paquete es el uso de la palabra reservada  \"global\" para definir variables globales. \n",
     "En primer lugar debemos crear el paquete, que es un directorio o carpeta con varios archivos .py que se denominan módulos y dentro de ellos estarán las funciones entoces creamos dentro de una carpeta los siguientes archivos __init__.py ; ingreso_datos.py; adicion.py; principal.py.\n",
     "En el archivo __init__.py no se escribe ningún código, solo se crea ese archivo para que python reconozca a la carpeta como un paquete.\n",
     "Los otros archivos deberán tener el siguiente código (usado como ejemplo)"
