Update 24 USO de variables entre PAQUETES Y MODULOS.ipynb

--- a/24 USO de variables entre PAQUETES Y MODULOS.ipynb
+++ b/24 USO de variables entre PAQUETES Y MODULOS.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este tutorial esta dirigido a documentar como se puede usar variables entre módulos de un paquete. Mediante el primer modulo creamos y asignamos valores a 2 variables para usar en un segundo modulo llamado adició"
+    "Este tutorial esta dirigido a documentar como se puede usar variables entre módulos de un paquete. Mediante el primer modulo creamos y asignamos valores a 2 variables para usar en un segundo modulo llamado adición, las funciones de cada modulo se ejecuta a traves del modulo principal.py"
    ]
   },
   {
