--- a/24 USO de variables entre PAQUETES Y MODULOS.ipynb
+++ b/24 USO de variables entre PAQUETES Y MODULOS.ipynb
@@ -4,38 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "USO DE VARIABLES ENTRE MÓDULOS DE UN PAQUETE"
+    "USO DE MODULOS ENTRE PAQUETES Y MODULOS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este tutorial esta dirigido a documentar como se puede usar variables entre módulos de un paquete. Mediante el primer modulo creamos y asignamos valores a 2 variables para usar en un segundo modulo llamado adición, las funciones de cada modulo se ejecuta a traves del modulo principal.py"
+    "Este tutorial esta dirigido a documentar como se puede usar variables entre modulos y paquetes, primero empezaremos por el uso en modulos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La clave del uso de las variables entre modulos de un paquete es el uso de la palabra reservada  \"global\" para definir variables globales. \n",
-    "En primer lugar debemos crear el paquete, que es un directorio o carpeta con varios archivos .py que se denominan módulos y dentro de ellos estarán las funciones entoces creamos dentro de una carpeta los siguientes archivos __init__.py ; ingreso_datos.py; adicion.py; principal.py.\n",
-    "En el archivo __init__.py no se escribe ningún código, solo se crea ese archivo para que python reconozca a la carpeta como un paquete.\n",
-    "Los otros archivos deberán tener el siguiente código (usado como ejemplo)"
-
-   
+    "La clave del uso de las variables entre modulos y paquetes es el uso de \"global\" para definir varialble globales , en el siguiente codigo se define la función para ingreso de datos y las variables globales a y b , luego mediante input de manera dinamica se ingresa los datos.\n",
+    "Tambien las funciones se definen sin parametros o valores ya que ello se van definiendo como parte del codigo"
    ]
   },
-
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ingreso_datos.py\n",
     "def defdatos():\n",
-    "    global a # se define a como variable global\n",
+    "    global a\n",
     "    global b\n",
     "    a=int(input(\"ingresa el 1 numero\"))\n",
     "    b=int(input(\"ingresa el 2 numero\"))\n",
@@ -47,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente archivo debe tener"
+    "En la misma pagina, ya que estamos usando las variables entre funciones definimos una función o pragrama para el uso de las variables ingresadas"
    ]
   },
   {
@@ -56,9 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adicion.py \n",
     "def suma():\n",
-    "    from ingreso_datos import a, b # importamos a y b del modulo ingreso_datos\n",
     "    suma=a+b\n",
     "    print (\"la suma es\",suma)"
    ]
@@ -76,12 +68,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# principal.py\n",
     "def main():\n",
-    "    import ingreso_datos #importamos módulo \n",
-    "    import adicion #importamos módulo \n",
-    "    ingreso_datos.defdatos() # ejecutamos función defdatos del modulo ingreso_datos\n",
-    "    adicion.suma() # ejecutamos función suma del modulo adicion\n",
+    "       \n",
+    "    defdatos()\n",
+    "    suma()\n",
     "\n",
     "    \n",
     "\"\"\"Ejecuto el programa principal\"\"\"   \n",
@@ -92,7 +82,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RECUERDEN CADA MODULO ES UN ARCHIVO DIFERENTE .py"
+    "Finalmente todo el código quedaría de la siguiente manera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def defdatos():\n",
+    "    global a\n",
+    "    global b\n",
+    "    a=int(input(\"ingresa el 1 numero\"))\n",
+    "    b=int(input(\"ingresa el 2 numero\"))\n",
+    "    print(\"Para verificar\",a,b)\n",
+    "\n",
+    "def suma():\n",
+    "        suma=a+b\n",
+    "        print (\"la suma es\",suma)\n",
+    "\n",
+    "        \n",
+    "def main():\n",
+    "       \n",
+    "    defdatos()\n",
+    "    suma()\n",
+    "\n",
+    "    \n",
+    "\"\"\"Ejecuto el programa principal\"\"\"   \n",
+    "main()"
    ]
   }
  ],
